<resources>
    <string name="app_name">Mascotas</string>
    <string name="vaccinatedYes">Vaccinated</string>
    <string name="vaccinatedNo">No vaccinated</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="eventsLabel">Events:</string>
    <string name="processedLabel">Processed:</string>
    <string name="numReceivedLabel">Number of pets received: </string>
    <string name="normal_activity">Notifications pet list</string>
    <string name="add_pet">Add pet</string>
    <string name="retrieve_certain_pets">Retrieve pets by ID</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="load">Load</string>
    <string name="exit">Exit</string>
    <string name="notification_title">Mascotas</string>
    <string name="notification_description">new pet detected</string>
    <string name="add">Add Pet</string>
    <string name="pet_name">Pet name</string>
    <string name="owner_name">Owner name</string>
    <string name="pet_type">Pet type</string>
    <string name="other">Other</string>
    <string name="cat">Cat</string>
    <string name="bird">Bird</string>
    <string name="dog">Dog</string>
    <string name="vaccinated">Is vaccinated: </string>
    <string name="date">Adoption date: </string>
    <string name="changeDate">Change date: </string>
    <string name="comment">Comment: </string>
</resources>