<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ScraperActivity">

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="load"
        android:text="@string/load" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="exit"
        android:text="@string/exit" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/min" />

        <EditText
            android:id="@+id/minEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/max" />

        <EditText
            android:id="@+id/maxEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="number" />
    </LinearLayout>

    <ListView
        android:id="@+id/pets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="visible">

    </ListView>
</LinearLayout>