<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".PetListActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_weight="1" />

    <Button
        android:id="@+id/switchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="switchService"
        android:text="@string/start"
        android:visibility="visible" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="exit"
        android:text="@string/exit"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/textLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/eventLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="right"
            android:text="@string/eventsLabel" />

        <TextView
            android:id="@+id/numEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="right"
            android:text="0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/numProcessedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="right"
            android:text="@string/processedLabel" />

        <TextView
            android:id="@+id/numProcessed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="10dp"
            android:text="0" />
    </LinearLayout>

    <ListView
        android:visibility="visible"
        android:id="@+id/pets"
        android:layout_width="match_parent"
        android:layout_height="507dp"
        android:layout_weight="1"
        android:padding="10dp" >
    </ListView>

</LinearLayout>
